[gd_scene load_steps=4 format=3 uid="uid://cq1ive6qk8q0o"]

[ext_resource type="Script" uid="uid://c7m2a1xywb3qy" path="res://scripts/player_indicator_ui.gd" id="1_3wjjc"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_t6nlf"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_e1uuo"]
noise = SubResource("FastNoiseLite_t6nlf")

[node name="PlayerIndicator" type="Control"]
custom_minimum_size = Vector2(320, 80)
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -161.0
offset_right = 159.0
offset_bottom = 80.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_3wjjc")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="CardContent" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12
alignment = 1

[node name="TurnIndicator" type="TextureRect" parent="MarginContainer/CardContent"]
clip_contents = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = SubResource("NoiseTexture2D_e1uuo")
expand_mode = 2

[node name="PlayerAvatar" type="TextureRect" parent="MarginContainer/CardContent"]
clip_contents = true
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
texture = SubResource("NoiseTexture2D_e1uuo")
expand_mode = 5
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CardContent"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Header" type="HBoxContainer" parent="MarginContainer/CardContent/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 4
alignment = 1

[node name="PlayerName" type="Label" parent="MarginContainer/CardContent/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Player Name"
horizontal_alignment = 1

[node name="TypeIcons" type="HBoxContainer" parent="MarginContainer/CardContent/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
alignment = 1

[node name="VIG" type="Label" parent="MarginContainer/CardContent/VBoxContainer/TypeIcons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "VIG:000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FLUX" type="Label" parent="MarginContainer/CardContent/VBoxContainer/TypeIcons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "FLX:000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FORT" type="Label" parent="MarginContainer/CardContent/VBoxContainer/TypeIcons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "FORT:000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Indicators" type="VBoxContainer" parent="MarginContainer/CardContent"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 4
alignment = 1

[node name="NecromancyIndicator" type="TextureRect" parent="MarginContainer/CardContent/Indicators"]
clip_contents = true
custom_minimum_size = Vector2(16, 8)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2
texture = SubResource("NoiseTexture2D_e1uuo")
expand_mode = 2

[node name="DarknessIndicator" type="TextureRect" parent="MarginContainer/CardContent/Indicators"]
clip_contents = true
custom_minimum_size = Vector2(16, 8)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2
texture = SubResource("NoiseTexture2D_e1uuo")
expand_mode = 2

[node name="DispelIndicator" type="TextureRect" parent="MarginContainer/CardContent/Indicators"]
clip_contents = true
custom_minimum_size = Vector2(16, 8)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2
texture = SubResource("NoiseTexture2D_e1uuo")
expand_mode = 2

[node name="ChaosSurgeIndicator" type="TextureRect" parent="MarginContainer/CardContent/Indicators"]
clip_contents = true
custom_minimum_size = Vector2(16, 8)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2
texture = SubResource("NoiseTexture2D_e1uuo")
expand_mode = 2

[node name="MarkedIndicator" type="TextureRect" parent="MarginContainer/CardContent/Indicators"]
clip_contents = true
custom_minimum_size = Vector2(16, 8)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2
texture = SubResource("NoiseTexture2D_e1uuo")
expand_mode = 2

[node name="CharmedIndicator" type="TextureRect" parent="MarginContainer/CardContent/Indicators"]
clip_contents = true
custom_minimum_size = Vector2(16, 8)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2
texture = SubResource("NoiseTexture2D_e1uuo")
expand_mode = 2

[node name="IllusionIndicator" type="TextureRect" parent="MarginContainer/CardContent/Indicators"]
clip_contents = true
custom_minimum_size = Vector2(16, 8)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2
texture = SubResource("NoiseTexture2D_e1uuo")
expand_mode = 2
